--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="hero">
       <div class="divlogo">
         <!--<img class="img-size" src="/images/Logo_Head.jpg" alt="" />-->
-        <object class="img-size" data="./images/Logo_Head.svg" type="image/svg+xml" ></object>
+        <object class="img-size" data="./images/Logo_Head.svg" ></object>
         <div class="hero-title">Эффективные решения для вашего бизнеса</div>
         <button class="button-title">
           <b>Заказать услугу</b>
@@ -94,7 +94,7 @@
       <div>
         <ul class="features">
           <li class="features-card">
-            <object class="vector1" data="./images/Vector1.svg" type="image/svg+xml" width="auto" height="70px"></object>
+            <object class="vector1" data="./images/Vector1.svg" width="66" height="70"></object>
             <div class="features-names">Внимание к деталям</div>
             <div class="features-text">
               Идейные соображения, а также начало повседневной работы по
@@ -102,7 +102,7 @@
             </div>
           </li>
           <li class="features-card">
-            <object class="vector1" data="./images/Vector2.svg" type="image/svg+xml" width="66" height="70"></object>
+            <object class="vector1" data="./images/Vector2.svg" width="66" height="70"></object>
             <div class="features-names">Пунктуальность</div>
             <div class="features-text">
               Задача организации, в особенности же рамки и место обучения кадров
@@ -110,7 +110,7 @@
             </div>
           </li>
           <li class="features-card">
-            <object class="vector1" data="./images/Vector3.svg" type="image/svg+xml" width="66" height="70"></object>
+            <object class="vector1" data="./images/Vector3.svg" width="66" height="70"></object>
             <div class="features-names">Планирование</div>
             <div class="features-text">
               Равным образом консультация с широким активом в значительной
@@ -118,7 +118,7 @@
             </div>
           </li>
           <li class="features-card">
-            <object class="vector1" data="./images/Vector4.svg" type="image/svg+xml" width="66" height="70"></object>
+            <object class="vector1" data="./images/Vector4.svg" width="66" height="70"></object>
             <div class="features-names">Современные технологии</div>
             <div class="features-text">
               Значимость этих проблем настолько очевидна, что реализация
@@ -168,22 +168,22 @@
               <ul class="socialnetworks-links">
                 <li class="socialnetworks-item">
                   <a href="./">
-                    <img src="./images/icons/social-instagram.svg" type="image/svg+xml" alt="" />
+                    <img src="./images/icons/social-instagram.svg" alt="" />
                   </a>
                 </li>
                 <li class="socialnetworks-item">
                   <a href="./">
-                    <img src="./images/icons/social-twitter.svg" type="image/svg+xml" alt="" />
+                    <img src="./images/icons/social-twitter.svg" alt="" />
                   </a>
                 </li>
                 <li class="socialnetworks-item">
                   <a href="./">
-                    <img src="./images/icons/social-facebook.svg" type="image/svg+xml" alt="" />
+                    <img src="./images/icons/social-facebook.svg" alt="" />
                   </a>
                 </li>
                 <li class="socialnetworks-item">
                   <a href="./">
-                    <img src="./images/icons/social-linkedin.svg" type="image/svg+xml" alt="" />
+                    <img src="./images/icons/social-linkedin.svg" alt="" />
                   </a>
                 </li>
               </ul>
@@ -197,22 +197,22 @@
               <ul class="socialnetworks-links">
                 <li class="socialnetworks-item">
                   <a href="./">
-                    <img src="./images/icons/social-instagram.svg" type="image/svg+xml" alt="" />
+                    <img src="./images/icons/social-instagram.svg" alt="" />
                   </a>
                 </li>
                 <li class="socialnetworks-item">
                   <a href="./">
-                    <img src="./images/icons/social-twitter.svg" type="image/svg+xml" alt="" />
+                    <img src="./images/icons/social-twitter.svg" alt="" />
                   </a>
                 </li>
                 <li class="socialnetworks-item">
                   <a href="./">
-                    <img src="./images/icons/social-facebook.svg" type="image/svg+xml" alt="" />
+                    <img src="./images/icons/social-facebook.svg" alt="" />
                   </a>
                 </li>
                 <li class="socialnetworks-item">
                   <a href="./">
-                    <img src="./images/icons/social-linkedin.svg" type="image/svg+xml" alt="" />
+                    <img src="./images/icons/social-linkedin.svg" alt="" />
                   </a>
                 </li>
               </ul>
@@ -226,22 +226,22 @@
               <ul class="socialnetworks-links">
                 <li class="socialnetworks-item">
                   <a href="./">
-                    <img src="./images/icons/social-instagram.svg" type="image/svg+xml" alt="" />
+                    <img src="./images/icons/social-instagram.svg" alt="" />
                   </a>                  
                 </li>
                 <li class="socialnetworks-item">
                   <a href="./">
-                    <img src="./images/icons/social-twitter.svg" type="image/svg+xml" alt="" />
+                    <img src="./images/icons/social-twitter.svg" alt="" />
                   </a>
                 </li>
                 <li class="socialnetworks-item">
                   <a href="./">
-                    <img src="./images/icons/social-facebook.svg" type="image/svg+xml" alt="" />
+                    <img src="./images/icons/social-facebook.svg" alt="" />
                   </a>
                 </li>
                 <li class="socialnetworks-item">
                   <a href="./">
-                    <img src="./images/icons/social-linkedin.svg" type="image/svg+xml" alt="" />
+                    <img src="./images/icons/social-linkedin.svg" alt="" />
                   </a>
                 </li>
               </ul>
@@ -255,22 +255,22 @@
               <ul class="socialnetworks-links">
                 <li class="socialnetworks-item">
                   <a href="./">
-                    <img src="./images/icons/social-instagram.svg" type="image/svg+xml" alt="" />
+                    <img src="./images/icons/social-instagram.svg" alt="" />
                   </a>
                 </li>
                 <li class="socialnetworks-item">
                   <a href="./">
-                    <img src="./images/icons/social-twitter.svg" type="image/svg+xml" alt="" />
+                    <img src="./images/icons/social-twitter.svg" alt="" />
                   </a>
                 </li>
                 <li class="socialnetworks-item">
                   <a href="./">
-                    <img src="./images/icons/social-facebook.svg" type="image/svg+xml" alt="" />
+                    <img src="./images/icons/social-facebook.svg" alt="" />
                   </a>
                 </li>
                 <li class="socialnetworks-item">
                   <a href="./">
-                    <img src="./images/icons/social-linkedin.svg" type="image/svg+xml" alt="" />
+                    <img src="./images/icons/social-linkedin.svg" alt="" />
                   </a>
                 </li>
               </ul>
@@ -285,32 +285,32 @@
         <ul class="ourclients">
           <li class="ourclients-item">
             <a href="./">             
-              <img src="./images/icons/Client1.svg" type="image/svg+xml" alt="" />
+              <img src="./images/icons/Client1.svg" alt="" />
             </a>            
           </li>
           <li class="ourclients-item">
             <a href="./">
-              <img src="./images/icons/Client2.svg" type="image/svg+xml" alt="" />
+              <img src="./images/icons/Client2.svg" alt="" />
             </a>
           </li>
           <li class="ourclients-item">
             <a href="./">
-              <img src="./images/icons/Client3.svg" type="image/svg+xml" alt="" />
+              <img src="./images/icons/Client3.svg" alt="" />
             </a>
           </li>
           <li class="ourclients-item">
             <a href="./">
-              <img src="./images/icons/Client4.svg" type="image/svg+xml" alt="" />
+              <img src="./images/icons/Client4.svg" alt="" />
             </a>
           </li>
           <li class="ourclients-item">
             <a href="./">
-              <img src="./images/icons/Client5.svg" type="image/svg+xml" alt="" />
+              <img src="./images/icons/Client5.svg" alt="" />
             </a>
           </li>
           <li class="ourclients-item">
             <a href="./">
-              <img src="./images/icons/Client6.svg" type="image/svg+xml" alt="" />
+              <img src="./images/icons/Client6.svg" alt="" />
             </a>
           </li>
         </ul>
