--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="hero">
       <div class="divlogo">
         <!--<img class="img-size" src="/images/Logo_Head.jpg" alt="" />-->
-        <object class="img-size" data="./images/Logo_Head.svg" ></object>
+        <object class="img-size" data="./images/Logo_Head.svg"></object>
         <div class="hero-title">Эффективные решения для вашего бизнеса</div>
         <button class="button-title">
           <b>Заказать услугу</b>
@@ -90,231 +90,251 @@
     </div>
 
     <!-- Особливості -->
-    
-      <div>
-        <ul class="features">
-          <li class="features-card">
-            <object class="vector1" data="./images/Vector1.svg" width="66" height="70"></object>
-            <div class="features-names">Внимание к деталям</div>
-            <div class="features-text">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </div>
-          </li>
-          <li class="features-card">
-            <object class="vector1" data="./images/Vector2.svg" width="66" height="70"></object>
-            <div class="features-names">Пунктуальность</div>
-            <div class="features-text">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </div>
-          </li>
-          <li class="features-card">
-            <object class="vector1" data="./images/Vector3.svg" width="66" height="70"></object>
-            <div class="features-names">Планирование</div>
-            <div class="features-text">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </div>
-          </li>
-          <li class="features-card">
-            <object class="vector1" data="./images/Vector4.svg" width="66" height="70"></object>
-            <div class="features-names">Современные технологии</div>
-            <div class="features-text">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </div>
-          </li>
-        </ul>
-      </div>
+
+    <div>
+      <ul class="features">
+        <li class="features-card">
+          <object
+            class="vector1"
+            data="./images/Vector1.svg"
+            width="66"
+            height="70"
+          ></object>
+          <h3 class="features-names">Внимание к деталям</h3>
+          <div class="features-text">
+            Идейные соображения, а также начало повседневной работы по
+            формированию позиции.
+          </div>
+        </li>
+        <li class="features-card">
+          <object
+            class="vector1"
+            data="./images/Vector2.svg"
+            width="66"
+            height="70"
+          ></object>
+          <h3 class="features-names">Пунктуальность</h3>
+          <div class="features-text">
+            Задача организации, в особенности же рамки и место обучения кадров
+            влечет за собой.
+          </div>
+        </li>
+        <li class="features-card">
+          <object
+            class="vector1"
+            data="./images/Vector3.svg"
+            width="66"
+            height="70"
+          ></object>
+          <h3 class="features-names">Планирование</h3>
+          <div class="features-text">
+            Равным образом консультация с широким активом в значительной степени
+            обуславливает.
+          </div>
+        </li>
+        <li class="features-card">
+          <object
+            class="vector1"
+            data="./images/Vector4.svg"
+            width="66"
+            height="70"
+          ></object>
+          <h3 class="features-names">Современные технологии</h3>
+          <div class="features-text">
+            Значимость этих проблем настолько очевидна, что реализация плановых
+            заданий.
+          </div>
+        </li>
+      </ul>
+    </div>
 
     <!-- Чим ми займаємось -->
-      <div class="working-command-section">
-        <h2 class="working-command-title">Чем мы занимаемся</h2>
-        <ul class="ourworking">
-          <li class="ourworking-card">
-            <img
-              class="img-size"
-              src="./images/1.jpg"
-              alt="Разработка HTML страниц"
-            />
-          </li>
-          <li class="ourworking-card">
-            <img
-              class="img-size"
-              src="./images/2.jpg"
-              alt="Разработка HTML страниц для мобильных телефонов"
-            />
-          </li>
-          <li class="ourworking-card">
-            <img
-              class="img-size"
-              src="./images/3.jpg"
-              alt="Разработка HTML страниц для планшетов"
-            />
-          </li>
-        </ul>
-      </div>
+    <div class="working-command-section">
+      <h2 class="working-command-title">Чем мы занимаемся</h2>
+      <ul class="ourworking">
+        <li class="ourworking-card">
+          <img
+            class="img-size"
+            src="./images/1.jpg"
+            alt="Разработка HTML страниц"
+          />
+        </li>
+        <li class="ourworking-card">
+          <img
+            class="img-size"
+            src="./images/2.jpg"
+            alt="Разработка HTML страниц для мобильных телефонов"
+          />
+        </li>
+        <li class="ourworking-card">
+          <img
+            class="img-size"
+            src="./images/3.jpg"
+            alt="Разработка HTML страниц для планшетов"
+          />
+        </li>
+      </ul>
+    </div>
 
     <!-- Наша команда -->
-      <div class="working-command-section">
-        <h2 class="working-command-title">Наша комманда</h2>
-        <ul class="ourcommand">
-          <li class="ourcommand-card">
-            <img src="./images/Card1.jpg" alt="Игорь Демьяненко" />
-            <div class="ourcommand-names">Игорь Демьяненко</div>
-            <p class="ourcommand-profi">Product Designer</p>
-            <div>
-              <ul class="socialnetworks-links">
-                <li class="socialnetworks-item">
-                  <a href="./">
-                    <img src="./images/icons/social-instagram.svg" alt="" />
-                  </a>
-                </li>
-                <li class="socialnetworks-item">
-                  <a href="./">
-                    <img src="./images/icons/social-twitter.svg" alt="" />
-                  </a>
-                </li>
-                <li class="socialnetworks-item">
-                  <a href="./">
-                    <img src="./images/icons/social-facebook.svg" alt="" />
-                  </a>
-                </li>
-                <li class="socialnetworks-item">
-                  <a href="./">
-                    <img src="./images/icons/social-linkedin.svg" alt="" />
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li class="ourcommand-card">
-            <img src="./images/Card2.jpg" alt="Ольга Репина" />
-            <div class="ourcommand-names">Ольга Репина</div>
-            <p class="ourcommand-profi">Frontend Developer</p>
-            <div>
-              <ul class="socialnetworks-links">
-                <li class="socialnetworks-item">
-                  <a href="./">
-                    <img src="./images/icons/social-instagram.svg" alt="" />
-                  </a>
-                </li>
-                <li class="socialnetworks-item">
-                  <a href="./">
-                    <img src="./images/icons/social-twitter.svg" alt="" />
-                  </a>
-                </li>
-                <li class="socialnetworks-item">
-                  <a href="./">
-                    <img src="./images/icons/social-facebook.svg" alt="" />
-                  </a>
-                </li>
-                <li class="socialnetworks-item">
-                  <a href="./">
-                    <img src="./images/icons/social-linkedin.svg" alt="" />
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li class="ourcommand-card">
-            <img src="./images/Card3.jpg" alt="Николай Тарасов" />
-            <div class="ourcommand-names">Николай Тарасов</div>
-            <p class="ourcommand-profi">Marketing</p>
-            <div>
-              <ul class="socialnetworks-links">
-                <li class="socialnetworks-item">
-                  <a href="./">
-                    <img src="./images/icons/social-instagram.svg" alt="" />
-                  </a>                  
-                </li>
-                <li class="socialnetworks-item">
-                  <a href="./">
-                    <img src="./images/icons/social-twitter.svg" alt="" />
-                  </a>
-                </li>
-                <li class="socialnetworks-item">
-                  <a href="./">
-                    <img src="./images/icons/social-facebook.svg" alt="" />
-                  </a>
-                </li>
-                <li class="socialnetworks-item">
-                  <a href="./">
-                    <img src="./images/icons/social-linkedin.svg" alt="" />
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li class="ourcommand-card">
-            <img src="./images/Card4.jpg" alt="Михаил Ермаков" />
-            <div class="ourcommand-names">Михаил Ермаков</div>
-            <p class="ourcommand-profi">UI Designer</p>
-            <div>
-              <ul class="socialnetworks-links">
-                <li class="socialnetworks-item">
-                  <a href="./">
-                    <img src="./images/icons/social-instagram.svg" alt="" />
-                  </a>
-                </li>
-                <li class="socialnetworks-item">
-                  <a href="./">
-                    <img src="./images/icons/social-twitter.svg" alt="" />
-                  </a>
-                </li>
-                <li class="socialnetworks-item">
-                  <a href="./">
-                    <img src="./images/icons/social-facebook.svg" alt="" />
-                  </a>
-                </li>
-                <li class="socialnetworks-item">
-                  <a href="./">
-                    <img src="./images/icons/social-linkedin.svg" alt="" />
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </li>
-        </ul>
-      </div>
+    <div class="working-command-section">
+      <h2 class="working-command-title">Наша комманда</h2>
+      <ul class="ourcommand">
+        <li class="ourcommand-card">
+          <img src="./images/Card1.jpg" alt="Игорь Демьяненко" />
+          <div class="ourcommand-names">Игорь Демьяненко</div>
+          <p class="ourcommand-profi">Product Designer</p>
+          <div>
+            <ul class="socialnetworks-links">
+              <li class="socialnetworks-item">
+                <a href="./">
+                  <img src="./images/icons/social-instagram.svg" alt="" />
+                </a>
+              </li>
+              <li class="socialnetworks-item">
+                <a href="./">
+                  <img src="./images/icons/social-twitter.svg" alt="" />
+                </a>
+              </li>
+              <li class="socialnetworks-item">
+                <a href="./">
+                  <img src="./images/icons/social-facebook.svg" alt="" />
+                </a>
+              </li>
+              <li class="socialnetworks-item">
+                <a href="./">
+                  <img src="./images/icons/social-linkedin.svg" alt="" />
+                </a>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li class="ourcommand-card">
+          <img src="./images/Card2.jpg" alt="Ольга Репина" />
+          <div class="ourcommand-names">Ольга Репина</div>
+          <p class="ourcommand-profi">Frontend Developer</p>
+          <div>
+            <ul class="socialnetworks-links">
+              <li class="socialnetworks-item">
+                <a href="./">
+                  <img src="./images/icons/social-instagram.svg" alt="" />
+                </a>
+              </li>
+              <li class="socialnetworks-item">
+                <a href="./">
+                  <img src="./images/icons/social-twitter.svg" alt="" />
+                </a>
+              </li>
+              <li class="socialnetworks-item">
+                <a href="./">
+                  <img src="./images/icons/social-facebook.svg" alt="" />
+                </a>
+              </li>
+              <li class="socialnetworks-item">
+                <a href="./">
+                  <img src="./images/icons/social-linkedin.svg" alt="" />
+                </a>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li class="ourcommand-card">
+          <img src="./images/Card3.jpg" alt="Николай Тарасов" />
+          <div class="ourcommand-names">Николай Тарасов</div>
+          <p class="ourcommand-profi">Marketing</p>
+          <div>
+            <ul class="socialnetworks-links">
+              <li class="socialnetworks-item">
+                <a href="./">
+                  <img src="./images/icons/social-instagram.svg" alt="" />
+                </a>
+              </li>
+              <li class="socialnetworks-item">
+                <a href="./">
+                  <img src="./images/icons/social-twitter.svg" alt="" />
+                </a>
+              </li>
+              <li class="socialnetworks-item">
+                <a href="./">
+                  <img src="./images/icons/social-facebook.svg" alt="" />
+                </a>
+              </li>
+              <li class="socialnetworks-item">
+                <a href="./">
+                  <img src="./images/icons/social-linkedin.svg" alt="" />
+                </a>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li class="ourcommand-card">
+          <img src="./images/Card4.jpg" alt="Михаил Ермаков" />
+          <div class="ourcommand-names">Михаил Ермаков</div>
+          <p class="ourcommand-profi">UI Designer</p>
+          <div>
+            <ul class="socialnetworks-links">
+              <li class="socialnetworks-item">
+                <a href="./">
+                  <img src="./images/icons/social-instagram.svg" alt="" />
+                </a>
+              </li>
+              <li class="socialnetworks-item">
+                <a href="./">
+                  <img src="./images/icons/social-twitter.svg" alt="" />
+                </a>
+              </li>
+              <li class="socialnetworks-item">
+                <a href="./">
+                  <img src="./images/icons/social-facebook.svg" alt="" />
+                </a>
+              </li>
+              <li class="socialnetworks-item">
+                <a href="./">
+                  <img src="./images/icons/social-linkedin.svg" alt="" />
+                </a>
+              </li>
+            </ul>
+          </div>
+        </li>
+      </ul>
+    </div>
 
     <!-- Постійні клієнти -->
-      <div class="working-command-section">
-        <h2 class="working-command-title">Постоянные клиенты</h2>
-        <ul class="ourclients">
-          <li class="ourclients-item">
-            <a href="./">             
-              <img src="./images/icons/Client1.svg" alt="" />
-            </a>            
-          </li>
-          <li class="ourclients-item">
-            <a href="./">
-              <img src="./images/icons/Client2.svg" alt="" />
-            </a>
-          </li>
-          <li class="ourclients-item">
-            <a href="./">
-              <img src="./images/icons/Client3.svg" alt="" />
-            </a>
-          </li>
-          <li class="ourclients-item">
-            <a href="./">
-              <img src="./images/icons/Client4.svg" alt="" />
-            </a>
-          </li>
-          <li class="ourclients-item">
-            <a href="./">
-              <img src="./images/icons/Client5.svg" alt="" />
-            </a>
-          </li>
-          <li class="ourclients-item">
-            <a href="./">
-              <img src="./images/icons/Client6.svg" alt="" />
-            </a>
-          </li>
-        </ul>
-      </div>
+    <div class="working-command-section">
+      <h2 class="working-command-title">Постоянные клиенты</h2>
+      <ul class="ourclients">
+        <li class="ourclients-item">
+          <a href="./">
+            <img src="./images/icons/Client1.svg" alt="" />
+          </a>
+        </li>
+        <li class="ourclients-item">
+          <a href="./">
+            <img src="./images/icons/Client2.svg" alt="" />
+          </a>
+        </li>
+        <li class="ourclients-item">
+          <a href="./">
+            <img src="./images/icons/Client3.svg" alt="" />
+          </a>
+        </li>
+        <li class="ourclients-item">
+          <a href="./">
+            <img src="./images/icons/Client4.svg" alt="" />
+          </a>
+        </li>
+        <li class="ourclients-item">
+          <a href="./">
+            <img src="./images/icons/Client5.svg" alt="" />
+          </a>
+        </li>
+        <li class="ourclients-item">
+          <a href="./">
+            <img src="./images/icons/Client6.svg" alt="" />
+          </a>
+        </li>
+      </ul>
+    </div>
 
     <footer>
       <div class="main-footer">
@@ -328,11 +348,13 @@
               <p>г. Киев, пр-т Леси Украинки, 26</p>
               <p>
                 <a class="link-email-footer" href="info@example.com"
-                  >info@example.com</a>
+                  >info@example.com</a
+                >
               </p>
               <p>
                 <a class="link-tel-footer" href="tel:380961111111"
-                  >+38 096 111 11 11</a>
+                  >+38 096 111 11 11</a
+                >
               </p>
             </address>
           </div>
