--- a/portfolio.html
+++ b/portfolio.html
@@ -29,100 +29,167 @@
     </style>
   </head>
   <body>
-    <header>
-      <div class="container">
-        <nav class="header-nav">
+    <header class="page-header">
+      <div class="container header">
+        <!--Навігація-->
+        <nav class="nav">
           <a class="logotype" href="./">
-            <span class="logotype-part1">Web</span><span class="logotype-part2">Studio</span>
+            <span class="logotype-part1">Web</span
+            ><span class="logotype-part2">Studio</span>
           </a>
-          <div>
-            <ul class="nav-list">
-              <li>
-                <a href="./" class="nav-link current">Студия</a>
-              </li>
-              <li>
-                <a href="./portfolio.html" class="nav-link">Портфолио</a>
-              </li>
-              <li>
-                <a href="#Contacts" class="nav-link">Контакты</a>
-              </li>
-            </ul>
-          </div>
-          <div>
-            <!-- Контакти -->
-            <ul class="contacts-list">
-              <li>
-                <object data="./images/icons/mail.svg" type="image/svg+xml" width="16" height="12"></object>
-                <a href="info@devstudio.com">info@devstudio.com</a>
-              </li>
-              <li>
-                <object data="./images/icons/phone.svg" type="image/svg+xml" width="16" height="12"></object>
-                <a href="tel:380961111111">+38 096 111 11 11</a>
-              </li>
-            </ul>
-          </div>
+
+          <ul class="nav-items">
+            <li>
+              <a class="nav-item" href="./index.html">Студия</a>
+            </li>
+            <li><a class="nav-item" href="./portfolio.html">Портфолио</a></li>
+            <li><a class="nav-item" href="#Contacts">Контакты</a></li>
+          </ul>
         </nav>
+
+        <ul class="header-contacts">
+          <li lang="en">
+            <object
+              data="./images/icons/mail.svg"
+              type="image/svg+xml"
+              width="16"
+              height="12"
+            ></object>
+            <a class="header-contact" href="mailto:info@devstudio.com">
+              info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <object
+              data="./images/icons/phone.svg"
+              type="image/svg+xml"
+              width="16"
+              height="12"
+            ></object>
+            <a class="header-contact" href="tel:+380961111111">
+              +38 096 111 11 11</a
+            >
+          </li>
+        </ul>
       </div>
     </header>
 
     <main>
-      <div class="portfolio">
-        <ul class="link-portfolio-menu">
-          <li class="link-portfolio-list"><a href="./">Все</a></li>
-          <li class="link-portfolio-list"><a href="./">Веб-сайты</a></li>
-          <li class="link-portfolio-list"><a href="./">Приложения</a></li>
-          <li class="link-portfolio-list"><a href="./">Дизайн</a></li>
-          <li class="link-portfolio-list"><a href="./">Маркетинг</a></li>
-        </ul>
-      
-        <div class="portfolio-items">
-          <ul class="hr">
-            <li class="portfolio-photo">
-              ><img src="./images/portfolio1.jpg" alt="Технокряк" />
-              <h3 class="portfolio-caption">Технокряк</h3>
-              <p class="portfolio-text">Веб-сайт</p>
-            </li>
-            <li class="portfolio-photo">
-              <img src="./images/portfolio2.jpg" alt="Постер New Orlean vs Golden Star" />
-              <h3 class="portfolio-caption">Постер New Orlean vs Golden Star</h3>
-              <p class="portfolio-text">Дизайн</p>
-            </li>
-            <li class="portfolio-photo">              
-              <img src="./images/portfolio3.jpg" alt="Ресторан Seafood" />
-              <h3 class="portfolio-caption">Ресторан Seafood</h3>
-              <p class="portfolio-text">Приложение</p>
-            </li>
-            <li class="portfolio-photo">
-              <img src="./images/portfolio4.jpg" alt="Проект Prime" />
-              <h3 class="portfolio-caption">Проект Prime</h3>
-              <p class="portfolio-text">Маркетинг</p>
-            </li>
-            <li class="portfolio-photo">
-              <img src="./images/portfolio5.jpg" alt="Проект Boxes" />
-              <h3 class="portfolio-caption">Проект Boxes</h3>
-              <p class="portfolio-text">Приложение</p>
-            </li>
-            <li class="portfolio-photo">              
-                <img src="./images/portfolio6.jpg" alt="Inspiration has no Borders" />
-              <h3 class="portfolio-caption">Inspiration has no Borders</h3>
-              <p class="portfolio-text">Веб-сайт</p>
-            </li>
-            <li class="portfolio-photo">
-              <img src="./images/portfolio7.jpg" alt="Издание Limited Edition" />
-              <h3 class="portfolio-caption">Издание Limited Edition</h3>
-              <p class="portfolio-text">Дизайн</p>
-            </li>
-            <li class="portfolio-photo">
-              <img src="./images/portfolio8.jpg" alt="Проект LAB" />
-              <h3 class="portfolio-caption">Проект LAB</h3>
-              <p class="portfolio-text">Маркетинг</p>
-            </li>
-            <li class="portfolio-photo">              
-              <img src="./images/portfolio9.jpg" alt="Growing Business" />
-              <h3 class="portfolio-caption">Growing Business</h3>
-              <p class="portfolio-text">Приложение</p>
-            </li>
+      <div class="portfolio-container">
+        <div class="portfolio">
+          <ul class="link-portfolio-menu">
+            <li><a class="link-portfolio-list" href="./">Все</a></li>
+            <li><a class="link-portfolio-list" href="./">Веб-сайты</a></li>
+            <li><a class="link-portfolio-list" href="./">Приложения</a></li>
+            <li><a class="link-portfolio-list" href="./">Дизайн</a></li>
+            <li><a class="link-portfolio-list" href="./">Маркетинг</a></li>
           </ul>
+
+          <div class="portfolio-items">
+            <ul class="hr">
+              <li class="portfolio-photo">
+                <div class="container-portfolio-photo">
+                  <img
+                    src="./images/portfolio1.jpg"
+                    alt="Технокряк"
+                    class="image"
+                  />
+                </div>
+                <h3 class="portfolio-caption">Технокряк</h3>
+                <p class="portfolio-text">Веб-сайт</p>
+              </li>
+              <li class="portfolio-photo">
+                <div class="container-portfolio-photo">
+                  <img
+                    src="./images/portfolio2.jpg"
+                    alt="Постер New Orlean vs Golden Star"
+                    class="image"
+                  />
+                </div>
+                <h3 class="portfolio-caption">
+                  Постер New Orlean vs Golden Star
+                </h3>
+                <p class="portfolio-text">Дизайн</p>
+              </li>
+              <li class="portfolio-photo">
+                <div class="container-portfolio-photo">
+                  <img
+                    src="./images/portfolio3.jpg"
+                    alt="Ресторан Seafood"
+                    class="image"
+                  />
+                </div>
+                <h3 class="portfolio-caption">Ресторан Seafood</h3>
+                <p class="portfolio-text">Приложение</p>
+              </li>
+              <li class="portfolio-photo">
+                <div class="container-portfolio-photo">
+                  <img
+                    src="./images/portfolio4.jpg"
+                    alt="Проект Prime"
+                    class="image"
+                  />
+                </div>
+                <h3 class="portfolio-caption">Проект Prime</h3>
+                <p class="portfolio-text">Маркетинг</p>
+              </li>
+              <li class="portfolio-photo">
+                <div class="container-portfolio-photo">
+                  <img
+                    src="./images/portfolio5.jpg"
+                    alt="Проект Boxes"
+                    class="image"
+                  />
+                </div>
+                <h3 class="portfolio-caption">Проект Boxes</h3>
+                <p class="portfolio-text">Приложение</p>
+              </li>
+              <li class="portfolio-photo">
+                <div class="container-portfolio-photo">
+                  <img
+                    src="./images/portfolio6.jpg"
+                    alt="Inspiration has no Borders"
+                    class="image"
+                  />
+                </div>
+                <h3 class="portfolio-caption">Inspiration has no Borders</h3>
+                <p class="portfolio-text">Веб-сайт</p>
+              </li>
+              <li class="portfolio-photo">
+                <div class="container-portfolio-photo">
+                  <img
+                    src="./images/portfolio7.jpg"
+                    alt="Издание Limited Edition"
+                    class="image"
+                  />
+                </div>
+                <h3 class="portfolio-caption">Издание Limited Edition</h3>
+                <p class="portfolio-text">Дизайн</p>
+              </li>
+              <li class="portfolio-photo">
+                <div class="container-portfolio-photo">
+                  <img
+                    src="./images/portfolio8.jpg"
+                    alt="Проект LAB"
+                    class="image"
+                  />
+                </div>
+                <h3 class="portfolio-caption">Проект LAB</h3>
+                <p class="portfolio-text">Маркетинг</p>
+              </li>
+              <li class="portfolio-photo">
+                <div class="container-portfolio-photo">
+                  <img
+                    src="./images/portfolio9.jpg"
+                    alt="Growing Business"
+                    class="image"
+                  />
+                </div>
+                <h3 class="portfolio-caption">Growing Business</h3>
+                <p class="portfolio-text">Приложение</p>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </main>
@@ -153,25 +220,33 @@
             <div class="socialfooter-title">ПРИСОЕДИНЯЙТЕСЬ</div>
             <div>
               <ul class="socialfooter-links">
-                <li class="socialfooter-item">
-                  <a href="./">
-                    <img src="./images/icons/social-instagram-big.svg" alt="" />
-                  </a>
+                <li>
+                  <button class="social-button-footer">
+                    <svg class="button-icon" width="20" height="20">
+                      <use href="./images/svg/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </button>
                 </li>
-                <li class="socialfooter-item">
-                  <a href="./">
-                    <img src="./images/icons/social-twitter-big.svg" alt="" />
-                  </a>
+                <li>
+                  <button class="social-button-footer">
+                    <svg class="button-icon" width="20" height="20">
+                      <use href="./images/svg/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </button>
                 </li>
-                <li class="socialfooter-item">
-                  <a href="./">
-                    <img src="./images/icons/social-facebook-big.svg" alt="" />
-                  </a>
+                <li>
+                  <button class="social-button-footer">
+                    <svg class="button-icon" width="20" height="20">
+                      <use href="./images/svg/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </button>
                 </li>
-                <li class="socialfooter-item">
-                  <a href="./">
-                    <img src="./images/icons/social-linkedin-big.svg" alt="" />
-                  </a>
+                <li>
+                  <button class="social-button-footer">
+                    <svg class="button-icon" width="20" height="20">
+                      <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </button>
                 </li>
               </ul>
             </div>
